crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_inv_inside_nested_block.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED bad_loop
  loop body starting at src/main.rs:2:17: 8:6 requires exactly one //@ inv <expr> before the body
  src/main.rs:2:5: 8:6

stderr:
