crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_inv_not_at_loop_start.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED bad_loop
  ghost statement must be placed immediately before the statement
  src/main.rs:5:9: 5:15

stderr:
