crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_invalid_lemma_body.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
FAIL main
  lemma `bad` assertion failed
  lemma `bad`

stderr:
