crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_invalid_sidecar_tsuno.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 89
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED prepass
  duplicate function contract declaration `target`
  no-location

stderr:
