crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_legacy_extern_contract.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED prepass
  extern function contract syntax is unsupported; use `fn` or `unsafe fn`
  no-location

stderr:
