crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_legacy_function_contract_position.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED rejects_legacy_function_contract_position
  function contract directives must be placed immediately before the function body
  src/main.rs:3:1: 3:50
PASS main
  all assertions discharged

stderr:
