crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_legacy_question_binding.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED rejects_legacy_question_binding
  expected a //@ req predicate
  src/main.rs:1:1: 5:2

stderr:
