crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_legacy_resource_assert_keyword.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
expression: result
---
status: Some(1)
stdout:
UNSUPPORTED rejects_legacy_resource_assert_keyword
  unexpected `|` in //@ lemma call
  src/main.rs:6:9: 6:23

stderr:
