crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_legacy_string_literal_assertion.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED main
  unexpected character `"` in //@ assert predicate
  src/main.rs:4:5: 4:15

stderr:
