crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_lemma_call_precondition.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
FAIL main
  lemma `need_zero` precondition failed
  src/main.rs:12:5: 12:26

stderr:
