crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_lemma_calling_later_definition.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED prepass
  lemma `first` body: A lemma can call only preceding lemmas or itself.
  no-location

stderr:
