crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_let_directive_out_of_scope.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED rejects_let_directive_out_of_scope
  unresolved binding `y` in //@ assert
  src/main.rs:7:2: 7:2

stderr:
